--- a/btcstacking-fe/package.json
+++ b/btcstacking-fe/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "lucide-react": "^0.399.0",
     "next": "14.2.4",
     "react": "^18",
